website/versioned_docs/version-19.0/quick-start/patching-fixtures.md
---
id: patching-fixtures
title: Patching fixtures
sidebar_label: Patching fixtures
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

Press <Keys.HardKey>Patch</Keys.HardKey>, <Keys.SoftKey>Dimmers</Keys.SoftKey> or <Keys.SoftKey>Fixtures</Keys.SoftKey>.

For Fixtures, from the softkeys choose fixture manufacturer (type on
keyboard to filter the list) then fixture type, then fixture mode.

Set <Keys.SoftKey>DMX Line</Keys.SoftKey> and <Keys.SoftKey>Address</Keys.SoftKey>. Console will automatically set these
if you don't change them.

Press buttons in the Fixtures window to patch the fixtures (See [Patching Fixtures or Dimmers](../patching/patching-new-fixtures-or-dimmers.md)).

To patch a number of dimmers or fixtures at once, draw a selection box
over buttons on the screen. Or, set <Keys.SoftKey>Quantity</Keys.SoftKey> in the patch
menu.

To change DMX address or line once patched, use <Keys.SoftKey>Repatch Fixtures</Keys.SoftKey> or the Patch View screen as described below.

To replace/exchange/morph fixtures with similar fixtures, patch new fixture onto same button(s) as old fixture
and select <Keys.SoftKey>Exchange Fixture</Keys.SoftKey>  (see [Exchange Fixture](../patching/changing-the-patch.md#fixture-exchange)). Titan will try to map similar attributes or you can do this yourself.

## View fixture patch

To see an overview screen of how the console is patched, press <Keys.HardKey>Open/View</Keys.HardKey> then <Keys.HardKey>Patch</Keys.HardKey> to open 
[Patch View](../patching/changing-the-patch.md#patch-view).

## Setting fixture options

Press <Keys.HardKey>Patch</Keys.HardKey>, <Keys.SoftKey>Edit Fixtures</Keys.SoftKey>, or use the Patch View screen.
